crates/glyph-cli/tests/corpus/invalid/case-violation/return_annotation_snake_case.glyph
block foo() -> link_mode
    description: "snake-case in return position is illegal."
    flow:
        return <"x">

skill demo()
    description: "Carrier."
    flow:
        return foo()
